--- a/index.html
+++ b/index.html
@@ -3,353 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solana KYC Compliance SDK | GitDigital Products</title>
+    <title>Solana KYC Compliance SDK</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
-        }
-
-        body {
-            background-color: #0f172a;
-            color: #f1f5f9;
-            line-height: 1.6;
-        }
-
-        .container {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        /* Header & Hero */
-        header {
-            padding: 2rem 0;
-            border-bottom: 1px solid #334155;
-            margin-bottom: 3rem;
-        }
-
-        .logo {
-            font-size: 1.8rem;
-            font-weight: 700;
-            color: #60a5fa;
-            margin-bottom: 1rem;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .logo i {
-            color: #3b82f6;
-        }
-
-        .hero {
-            text-align: center;
-            padding: 3rem 1rem;
-            margin-bottom: 3rem;
-        }
-
-        .hero h1 {
-            font-size: 2.8rem;
-            margin-bottom: 1rem;
-            background: linear-gradient(90deg, #60a5fa, #a78bfa);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-
-        .hero-tagline {
-            font-size: 1.2rem;
-            color: #cbd5e1;
-            max-width: 800px;
-            margin: 0 auto 2rem;
-        }
-
-        /* Cards & Sections */
-        section {
-            margin-bottom: 4rem;
-        }
-
-        .section-title {
-            font-size: 2rem;
-            color: #e2e8f0;
-            margin-bottom: 1.5rem;
-            padding-bottom: 0.5rem;
-            border-bottom: 2px solid #3b82f6;
-            display: inline-block;
-        }
-
-        .cards-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 25px;
-        }
-
-        .card {
-            background: #1e293b;
-            border-radius: 12px;
-            padding: 1.8rem;
-            border: 1px solid #334155;
-            transition: transform 0.3s ease, border-color 0.3s ease;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-            border-color: #60a5fa;
-        }
-
-        .card-icon {
-            font-size: 2rem;
-            color: #60a5fa;
-            margin-bottom: 1rem;
-        }
-
-        .card-title {
-            font-size: 1.4rem;
-            margin-bottom: 0.8rem;
-            color: #e2e8f0;
-        }
-
-        /* Buttons */
-        .button-group {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 15px;
-            justify-content: center;
-            margin: 2.5rem 0;
-        }
-
-        .btn {
-            display: inline-flex;
-            align-items: center;
-            gap: 10px;
-            padding: 0.9rem 1.8rem;
-            border-radius: 8px;
-            font-weight: 600;
-            text-decoration: none;
-            transition: all 0.3s ease;
-        }
-
-        .btn-primary {
-            background: linear-gradient(90deg, #3b82f6, #6366f1);
-            color: white;
-        }
-
-        .btn-secondary {
-            background-color: #334155;
-            color: #e2e8f0;
-            border: 1px solid #475569;
-        }
-
-        .btn:hover {
-            transform: scale(1.05);
-            box-shadow: 0 5px 15px rgba(59, 130, 246, 0.3);
-        }
-
-        /* Philosophy List */
-        .philosophy-list {
-            list-style: none;
-        }
-
-        .philosophy-list li {
-            background: #1e293b;
-            margin-bottom: 1rem;
-            padding: 1.2rem;
-            border-left: 4px solid #3b82f6;
-            border-radius: 0 8px 8px 0;
-        }
-
-        /* Status & Alert */
-        .status-badge {
-            display: inline-flex;
-            align-items: center;
-            padding: 0.5rem 1rem;
-            background-color: #1e293b;
-            border: 1px solid #475569;
-            border-radius: 20px;
-            font-size: 0.9rem;
-            margin-top: 1rem;
-        }
-
-        .status-active {
-            color: #4ade80;
-            margin-right: 10px;
-        }
-
-        .alert-box {
-            background-color: rgba(30, 58, 138, 0.2);
-            border: 1px solid #3b82f6;
-            border-radius: 8px;
-            padding: 1.5rem;
-            margin: 2rem 0;
-        }
-
-        /* Footer */
-        footer {
-            text-align: center;
-            padding: 3rem 0;
-            border-top: 1px solid #334155;
-            margin-top: 3rem;
-            color: #94a3b8;
-            font-size: 0.9rem;
-        }
-
-        /* Mobile Responsiveness */
+        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', system-ui, sans-serif; }
+        body { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: #333; line-height: 1.6; min-height: 100vh; }
+        .container { max-width: 1200px; margin: 0 auto; padding: 20px; }
+        header { text-align: center; padding: 4rem 1rem; color: white; }
+        header h1 { font-size: 3.5rem; margin-bottom: 1rem; font-weight: 800; }
+        header p { font-size: 1.4rem; max-width: 700px; margin: 0 auto 2rem; opacity: 0.9; }
+        .btn { display: inline-block; background: #00d084; color: white; padding: 1rem 2.5rem; border-radius: 50px; text-decoration: none; font-weight: bold; font-size: 1.2rem; transition: all 0.3s ease; border: none; cursor: pointer; }
+        .btn:hover { background: #00b874; transform: translateY(-3px); box-shadow: 0 10px 20px rgba(0,0,0,0.2); }
+        .btn-secondary { background: transparent; border: 2px solid white; margin-left: 15px; }
+        .btn-secondary:hover { background: rgba(255,255,255,0.1); }
+        main { background: white; border-radius: 20px; padding: 3rem; box-shadow: 0 20px 60px rgba(0,0,0,0.15); margin-top: -30px; position: relative; }
+        section { margin-bottom: 3rem; }
+        h2 { color: #444; border-bottom: 3px solid #764ba2; padding-bottom: 0.7rem; margin-bottom: 1.5rem; font-size: 2.2rem; }
+        h3 { color: #667eea; margin: 1.5rem 0 0.8rem; font-size: 1.5rem; }
+        .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; }
+        .feature-card { background: #f8f9ff; padding: 2rem; border-radius: 15px; border-left: 5px solid #667eea; }
+        .feature-card i { font-size: 2.5rem; color: #667eea; margin-bottom: 1rem; }
+        code, pre { background: #f4f4f4; padding: 0.2rem 0.6rem; border-radius: 5px; font-family: 'Courier New', monospace; }
+        pre { padding: 1.5rem; overflow-x: auto; margin: 1rem 0; }
+        footer { text-align: center; padding: 2rem; color: white; opacity: 0.8; margin-top: 2rem; }
         @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2.2rem;
-            }
-            .button-group {
-                flex-direction: column;
-                align-items: center;
-            }
-            .btn {
-                width: 100%;
-                justify-content: center;
-            }
-            .cards-grid {
-                grid-template-columns: 1fr;
-            }
+            header h1 { font-size: 2.5rem; }
+            .btn { display: block; width: 100%; margin-bottom: 1rem; }
+            .btn-secondary { margin-left: 0; }
         }
     </style>
 </head>
 <body>
     <div class="container">
         <header>
-            <div class="logo">
-                <i class="fas fa-shield-alt"></i>
-                GitDigital Products
-            </div>
+            <h1>Solana KYC Compliance SDK</h1>
+            <p>A robust developer toolkit to integrate seamless Know Your Customer (KYC) and Anti-Money Laundering (AML) checks directly into your Solana applications. Ensure regulatory compliance with minimal friction.</p>
+            <a href="#get-started" class="btn"><i class="fas fa-rocket"></i> Get Started</a>
+            <a href="https://github.com/gitdigital-products/solana-kyc-compliance-sdk" class="btn btn-secondary" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
         </header>
 
         <main>
-            <section class="hero">
-                <h1>Solana KYC Compliance SDK</h1>
-                <p class="hero-tagline">
-                    An open-source SDK for enforcing KYC/AML compliance directly at the token level on Solana using Token Extensions. Includes a Rust on-chain program, TypeScript SDK, and Compliance Registry for institutional-grade Real-World Asset (RWA) issuance.
-                </p>
-                <div class="button-group">
-                    <a href="https://github.com/Gitdigital-products/solana-kyc-compliance-sdk" class="btn btn-primary" target="_blank">
-                        <i class="fab fa-github"></i> View on GitHub
-                    </a>
-                    <a href="#docs" class="btn btn-secondary">
-                        <i class="fas fa-book"></i> Explore Documentation
-                    </a>
-                </div>
-                <div class="status-badge">
-                    <span class="status-active"><i class="fas fa-circle"></i> Active Development</span>
-                    Architecture: MVP → Iteration
-                </div>
+            <section id="overview">
+                <h2>Overview</h2>
+                <p>This SDK simplifies the complex process of embedding regulatory compliance into decentralized applications (dApps) on the Solana blockchain. It provides a unified interface for identity verification, risk assessment, and compliance reporting, allowing you to focus on building your core product.</p>
             </section>
 
-            <section id="what-it-is">
-                <h2 class="section-title">What It Is</h2>
-                <div class="cards-grid">
-                    <div class="card">
-                        <div class="card-icon">
-                            <i class="fas fa-user-check"></i>
-                        </div>
-                        <h3 class="card-title">KYC & Identity Workflows</h3>
-                        <p>Provides modular tooling for identity verification workflows and compliance-aware Solana program integration.</p>
+            <section id="features">
+                <h2>Core Features</h2>
+                <div class="features-grid">
+                    <div class="feature-card">
+                        <i class="fas fa-user-check"></i>
+                        <h3>Identity Verification</h3>
+                        <p>Integrate with leading providers for document checks, liveness detection, and biometric verification. Store results as on-chain attestations.</p>
                     </div>
-                    <div class="card">
-                        <div class="card-icon">
-                            <i class="fas fa-cube"></i>
-                        </div>
-                        <h3 class="card-title">SDK, Not Custodian</h3>
-                        <p>GitDigital Products does not custody user funds or act as a financial institution. You retain full control.</p>
+                    <div class="feature-card">
+                        <i class="fas fa-shield-alt"></i>
+                        <h3>Risk Scoring</h3>
+                        <p>Automated AML screening and transaction monitoring. Real-time risk scoring for wallets and transactions based on global watchlists.</p>
                     </div>
-                    <div class="card">
-                        <div class="card-icon">
-                            <i class="fas fa-clipboard-list"></i>
-                        </div>
-                        <h3 class="card-title">Audit-Ready by Default</h3>
-                        <p>Built with logging, controls, and comprehensive documentation as first-class citizens for enterprise use.</p>
+                    <div class="feature-card">
+                        <i class="fas fa-cogs"></i>
+                        <h3>Program Library</h3>
+                        <p>A set of on-chain Solana programs for managing verified user statuses, whitelists, and compliance rules enforced by smart contracts.</p>
+                    </div>
+                    <div class="feature-card">
+                        <i class="fas fa-file-contract"></i>
+                        <h3>Audit Trail</h3>
+                        <p>Generate immutable, on-chain records of all KYC checks and compliance decisions for easy reporting to auditors and regulators.</p>
                     </div>
                 </div>
             </section>
 
-            <section id="philosophy">
-                <h2 class="section-title">Design Philosophy</h2>
-                <ul class="philosophy-list">
-                    <li><strong>Compliance-aware, not compliance-blocking</strong> – Integrates KYC/AML support without killing user experience.</li>
-                    <li><strong>Blockchain-native</strong> – Designed around Solana’s execution model, RPC dependencies, and ecosystem realities.</li>
-                    <li><strong>For Builders</strong> – Built for Web3 startups, regulated DeFi platforms, wallets, marketplaces, and enterprises deploying on Solana.</li>
-                </ul>
-            </section>
+            <section id="get-started">
+                <h2>Quick Start</h2>
+                <h3>Installation</h3>
+                <p>Install the SDK package via npm or yarn:</p>
+                <pre><code>npm install @gitdigital-products/solana-kyc-sdk
+# or
+yarn add @gitdigital-products/solana-kyc-sdk</code></pre>
+                <h3>Basic Usage</h3>
+                <p>Initialize the SDK and perform a basic check:</p>
+                <pre><code>import { KYCClient } from '@gitdigital-products/solana-kyc-sdk';
+import { Connection, clusterApiUrl } from '@solana/web3.js';
 
-            <section id="security">
-                <h2 class="section-title">Security & Trust</h2>
-                <div class="alert-box">
-                    <p><i class="fas fa-info-circle"></i> This repository includes a full <strong>Compliance & Trust Framework</strong> covering Business Continuity, Disaster Recovery, Incident Response, Risk Management, and alignment with SOC 2 / ISO 27001 controls.</p>
-                </div>
-                <p>Security is not an afterthought. See the included documentation:</p>
-                <div class="cards-grid" style="margin-top: 1.5rem;">
-                    <div class="card">
-                        <i class="fas fa-file-contract card-icon"></i>
-                        <h3 class="card-title">Policies & Docs</h3>
-                        <p>Comprehensive policies in the <code>/docs</code> folder (Business Continuity, Disaster Recovery, Incident Response, etc.).</p>
-                    </div>
-                    <div class="card">
-                        <i class="fas fa-user-shield card-icon"></i>
-                        <h3 class="card-title">Responsible Disclosure</h3>
-                        <p>Found a security issue? Contact <strong>security@gitdigital.products</strong>. See <code>SECURITY.md</code> for details.</p>
-                    </div>
-                </div>
-            </section>
+const connection = new Connection(clusterApiUrl('devnet'));
+const client = new KYCClient(connection, YOUR_PROVIDER_CONFIG);
 
-            <section id="compliance">
-                <h2 class="section-title">Compliance Alignment</h2>
-                <p>The SDK is designed to support customers working under various regulatory frameworks, including:</p>
-                <div class="cards-grid" style="margin-top: 1.5rem;">
-                    <div class="card">KYC / AML Requirements</div>
-                    <div class="card">GDPR & Data Privacy</div>
-                    <div class="card">Enterprise Security Reviews</div>
-                    <div class="card">SOC 2 Readiness</div>
-                </div>
-                <p style="margin-top: 1.5rem; font-style: italic;"><strong>Important:</strong> GitDigital Products provides tooling only. Customers remain responsible for their own regulatory compliance.</p>
-            </section>
-
-            <section id="license">
-                <h2 class="section-title">License</h2>
-                <div class="card">
-                    <div class="card-icon">
-                        <i class="fas fa-balance-scale"></i>
-                    </div>
-                    <h3 class="card-title">Apache License 2.0</h3>
-                    <p>This project is open-source and licensed under the permissive Apache License 2.0. You are free to use, modify, and distribute the software, subject to the license terms.</p>
-                    <a href="http://www.apache.org/licenses/LICENSE-2.0" class="btn btn-secondary" style="margin-top: 1rem;" target="_blank">
-                        <i class="fas fa-external-link-alt"></i> View Full License
-                    </a>
-                </div>
+// Example: Check a user's wallet status
+const walletAddress = '...';
+const status = await client.getVerificationStatus(walletAddress);
+console.log(`KYC Status: ${status}`);</code></pre>
+                <a href="#" class="btn" style="margin-top:1rem;"><i class="fas fa-book"></i> Read Full Documentation</a>
             </section>
         </main>
 
         <footer>
-            <p>Solana KYC Compliance SDK – Open-source tooling for a compliant decentralized future.</p>
-            <p style="margin-top: 1rem;">© 2025 GitDigital Products. All rights reserved.</p>
+            <p>© 2025 GitDigital Products. All rights reserved.</p>
+            <p>This SDK is provided for integration purposes. Developers are responsible for ensuring full regulatory compliance in their specific jurisdictions.</p>
         </footer>
     </div>
-
-    <script>
-        // Smooth scrolling for anchor links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                const targetId = this.getAttribute('href');
-                if(targetId === '#') return;
-                const targetElement = document.querySelector(targetId);
-                if(targetElement) {
-                    window.scrollTo({
-                        top: targetElement.offsetTop - 80,
-                        behavior: 'smooth'
-                    });
-                }
-            });
-        });
-    </script>
 </body>
 </html>
