--- a/Update index.html
+++ b/Update index.html
@@ -1,101 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solana KYC Compliance SDK</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', system-ui, sans-serif; }
-        body { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: #333; line-height: 1.6; min-height: 100vh; }
-        .container { max-width: 1200px; margin: 0 auto; padding: 20px; }
-        header { text-align: center; padding: 4rem 1rem; color: white; }
-        header h1 { font-size: 3.5rem; margin-bottom: 1rem; font-weight: 800; }
-        header p { font-size: 1.4rem; max-width: 700px; margin: 0 auto 2rem; opacity: 0.9; }
-        .btn { display: inline-block; background: #00d084; color: white; padding: 1rem 2.5rem; border-radius: 50px; text-decoration: none; font-weight: bold; font-size: 1.2rem; transition: all 0.3s ease; border: none; cursor: pointer; }
-        .btn:hover { background: #00b874; transform: translateY(-3px); box-shadow: 0 10px 20px rgba(0,0,0,0.2); }
-        .btn-secondary { background: transparent; border: 2px solid white; margin-left: 15px; }
-        .btn-secondary:hover { background: rgba(255,255,255,0.1); }
-        main { background: white; border-radius: 20px; padding: 3rem; box-shadow: 0 20px 60px rgba(0,0,0,0.15); margin-top: -30px; position: relative; }
-        section { margin-bottom: 3rem; }
-        h2 { color: #444; border-bottom: 3px solid #764ba2; padding-bottom: 0.7rem; margin-bottom: 1.5rem; font-size: 2.2rem; }
-        h3 { color: #667eea; margin: 1.5rem 0 0.8rem; font-size: 1.5rem; }
-        .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; }
-        .feature-card { background: #f8f9ff; padding: 2rem; border-radius: 15px; border-left: 5px solid #667eea; }
-        .feature-card i { font-size: 2.5rem; color: #667eea; margin-bottom: 1rem; }
-        code, pre { background: #f4f4f4; padding: 0.2rem 0.6rem; border-radius: 5px; font-family: 'Courier New', monospace; }
-        pre { padding: 1.5rem; overflow-x: auto; margin: 1rem 0; }
-        footer { text-align: center; padding: 2rem; color: white; opacity: 0.8; margin-top: 2rem; }
-        @media (max-width: 768px) {
-            header h1 { font-size: 2.5rem; }
-            .btn { display: block; width: 100%; margin-bottom: 1rem; }
-            .btn-secondary { margin-left: 0; }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Solana KYC Compliance SDK | GitDigital Products</title>
+
+  <!-- Meta -->
+  <meta name="description" content="A privacy-first KYC & compliance SDK for Solana applications. Built for Web3 teams shipping real products." />
+  <meta name="author" content="GitDigital Products" />
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Styles -->
+  <style>
+    :root {
+      --solana-purple: #9945FF;
+      --bg: #0b0b0f;
+      --card: #15151d;
+      --text: #eaeaf0;
+      --muted: #9ca3af;
+      --accent: #22c55e;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Inter', system-ui, sans-serif;
+      background: radial-gradient(1200px 600px at top, #15151d, #0b0b0f);
+      color: var(--text);
+      line-height: 1.6;
+    }
+
+    a {
+      color: var(--solana-purple);
+      text-decoration: none;
+    }
+
+    header {
+      padding: 4rem 1.5rem 3rem;
+      text-align: center;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin-bottom: 0.75rem;
+    }
+
+    header p {
+      max-width: 720px;
+      margin: 0 auto;
+      color: var(--muted);
+      font-size: 1.05rem;
+    }
+
+    .badges {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+      justify-content: center;
+      margin-top: 2rem;
+    }
+
+    .badges img {
+      height: 22px;
+    }
+
+    main {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 2rem 1.5rem 4rem;
+    }
+
+    section {
+      margin-top: 3rem;
+    }
+
+    section h2 {
+      font-size: 1.5rem;
+      margin-bottom: 0.75rem;
+    }
+
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 1.25rem;
+      margin-top: 1.25rem;
+    }
+
+    .card {
+      background: var(--card);
+      border-radius: 12px;
+      padding: 1.25rem;
+      border: 1px solid rgba(255,255,255,0.05);
+    }
+
+    .card h3 {
+      margin-top: 0;
+      margin-bottom: 0.5rem;
+      font-size: 1.05rem;
+    }
+
+    .card p {
+      color: var(--muted);
+      font-size: 0.95rem;
+    }
+
+    .cta {
+      margin-top: 4rem;
+      padding: 2rem;
+      border-radius: 16px;
+      background: linear-gradient(135deg, rgba(153,69,255,0.15), rgba(34,197,94,0.15));
+      text-align: center;
+    }
+
+    .cta h2 {
+      margin-bottom: 0.75rem;
+    }
+
+    .cta a {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 0.75rem 1.25rem;
+      border-radius: 10px;
+      background: var(--solana-purple);
+      color: white;
+      font-weight: 600;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem 1.5rem;
+      color: var(--muted);
+      font-size: 0.85rem;
+    }
+  </style>
 </head>
+
 <body>
-    <div class="container">
-        <header>
-            <h1>Solana KYC Compliance SDK</h1>
-            <p>A robust developer toolkit to integrate seamless Know Your Customer (KYC) and Anti-Money Laundering (AML) checks directly into your Solana applications. Ensure regulatory compliance with minimal friction.</p>
-            <a href="#get-started" class="btn"><i class="fas fa-rocket"></i> Get Started</a>
-            <a href="https://github.com/gitdigital-products/solana-kyc-compliance-sdk" class="btn btn-secondary" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
-        </header>
 
-        <main>
-            <section id="overview">
-                <h2>Overview</h2>
-                <p>This SDK simplifies the complex process of embedding regulatory compliance into decentralized applications (dApps) on the Solana blockchain. It provides a unified interface for identity verification, risk assessment, and compliance reporting, allowing you to focus on building your core product.</p>
-            </section>
+  <header>
+    <h1>Solana KYC Compliance SDK</h1>
+    <p>
+      A privacy-first compliance toolkit for Solana applications.
+      Built to help Web3 teams meet KYC & AML expectations without sacrificing decentralization.
+    </p>
 
-            <section id="features">
-                <h2>Core Features</h2>
-                <div class="features-grid">
-                    <div class="feature-card">
-                        <i class="fas fa-user-check"></i>
-                        <h3>Identity Verification</h3>
-                        <p>Integrate with leading providers for document checks, liveness detection, and biometric verification. Store results as on-chain attestations.</p>
-                    </div>
-                    <div class="feature-card">
-                        <i class="fas fa-shield-alt"></i>
-                        <h3>Risk Scoring</h3>
-                        <p>Automated AML screening and transaction monitoring. Real-time risk scoring for wallets and transactions based on global watchlists.</p>
-                    </div>
-                    <div class="feature-card">
-                        <i class="fas fa-cogs"></i>
-                        <h3>Program Library</h3>
-                        <p>A set of on-chain Solana programs for managing verified user statuses, whitelists, and compliance rules enforced by smart contracts.</p>
-                    </div>
-                    <div class="feature-card">
-                        <i class="fas fa-file-contract"></i>
-                        <h3>Audit Trail</h3>
-                        <p>Generate immutable, on-chain records of all KYC checks and compliance decisions for easy reporting to auditors and regulators.</p>
-                    </div>
-                </div>
-            </section>
+    <div class="badges">
+      <img src="https://img.shields.io/badge/Grant-Ready-brightgreen" alt="Grant Ready"/>
+      <img src="https://img.shields.io/badge/Built%20for-Solana-9945FF?logo=solana&logoColor=white" alt="Solana"/>
+      <img src="https://img.shields.io/badge/Web3-Compliance-blueviolet" alt="Web3 Compliance"/>
+      <img src="https://img.shields.io/badge/KYC-Compatible-blue" alt="KYC"/>
+      <img src="https://img.shields.io/badge/AML-Aware-blue" alt="AML"/>
+      <img src="https://img.shields.io/badge/Privacy-First-success" alt="Privacy First"/>
+      <img src="https://img.shields.io/badge/Open%20Source-Yes-success" alt="Open Source"/>
+    </div>
+  </header>
 
-            <section id="get-started">
-                <h2>Quick Start</h2>
-                <h3>Installation</h3>
-                <p>Install the SDK package via npm or yarn:</p>
-                <pre><code>npm install @gitdigital-products/solana-kyc-sdk
-# or
-yarn add @gitdigital-products/solana-kyc-sdk</code></pre>
-                <h3>Basic Usage</h3>
-                <p>Initialize the SDK and perform a basic check:</p>
-                <pre><code>import { KYCClient } from '@gitdigital-products/solana-kyc-sdk';
-import { Connection, clusterApiUrl } from '@solana/web3.js';
+  <main>
 
-const connection = new Connection(clusterApiUrl('devnet'));
-const client = new KYCClient(connection, YOUR_PROVIDER_CONFIG);
+    <section>
+      <h2>Why this exists</h2>
+      <p>
+        Solana apps are moving from experiments to infrastructure.
+        That means compliance can’t be an afterthought.
+        This SDK gives builders a modular way to integrate KYC-aware flows while keeping user data minimized and off-chain.
+      </p>
+    </section>
 
-// Example: Check a user's wallet status
-const walletAddress = '...';
-const status = await client.getVerificationStatus(walletAddress);
-console.log(`KYC Status: ${status}`);</code></pre>
-                <a href="#" class="btn" style="margin-top:1rem;"><i class="fas fa-book"></i> Read Full Documentation</a>
-            </section>
-        </main>
+    <section>
+      <h2>Core principles</h2>
+      <div class="card-grid">
+        <div class="card">
+          <h3>Privacy-First by Design</h3>
+          <p>No on-chain PII. Identity proofs are abstracted, scoped, and verifiable.</p>
+        </div>
+        <div class="card">
+          <h3>Composable & Modular</h3>
+          <p>Integrates cleanly with existing Solana programs and off-chain services.</p>
+        </div>
+        <div class="card">
+          <h3>Jurisdiction-Aware</h3>
+          <p>Designed to support region-specific compliance logic without forking core code.</p>
+        </div>
+        <div class="card">
+          <h3>Grant-Ready Architecture</h3>
+          <p>Documented, auditable, and structured for ecosystem funding and review.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="cta">
+      <h2>Built by GitDigital Products</h2>
+      <p>
+        Open-source infrastructure focused on real-world Web3 adoption.
+      </p>
+      <a href="https://github.com/Gitdigital-products">View on GitHub</a>
+    </section>
+
+  </main>
+
+  <footer>
+    © 2026 GitDigital Products · Solana KYC Compliance SDK
+  </footer>
+
+</body>
+</html>        </main>
 
         <footer>
             <p>© 2026 GitDigital Products. All rights reserved.</p>
